# mycobot-pick-place-vision

./: Dockerfile  apt-requirements.txt  py-requirements.txt  run-container.sh
config/: 99_aptget  entrypoint.sh  update_bashrc
pick-place-pkgs/arm_control/: CMakeLists.txt  package.xml  setup.py
pick-place-pkgs/arm_control/config/arm_control_node/: default.json
pick-place-pkgs/arm_control/launch/: arm_control_node.launch
pick-place-pkgs/arm_control/src/arm_control/: arm_control_node.py  pump.py
pick-place-pkgs/perception/: CMakeLists.txt  package.xml  setup.py
pick-place-pkgs/perception/config/detection_node/: default.json
pick-place-pkgs/perception/launch/: detection_node.launch
pick-place-pkgs/perception/src/perception/: detection_node.py
pick-place-pkgs/pick_place/: CMakeLists.txt  package.xml  setup.py
pick-place-pkgs/pick_place/launch/: routine_client_node.launch  routine_node.launch  system.launch
pick-place-pkgs/pick_place/src/pick_place/: routine_client_node.py  routine_node.py
pick-place-pkgs/pick_place_msgs/: CMakeLists.txt  package.xml
pick-place-pkgs/pick_place_msgs/action/: PickPlace.action  PickPlaceAction.action
pick-place-pkgs/pick_place_msgs/srv/: DetectBottles.srv  GetJoints.srv  MoveArm.srv  SendAngle.srv  SendAngles.srv  SendCoord.srv  SendCoords.srv  VerifyPicking.srv
